tests/integration/asn1/validation/04_module_in_bundle_not_found_in_arguments/test.itest
RUN: (%asn1_parser generate-cfs \
RUN: %S/module_a.asn %S/module_b.asn \
RUN: --asn1-modules=module-a ; test $? = 1) \
RUN: | filecheck %s --dump-input=fail

CHECK: error: an issue occurred when validating the ASN.1 bundle: Module module-b was found in bundle, but was not found in the --asn1-modules command-line argument.
CHECK: Modules found in command-line argument: module-a
CHECK: Modules found in bundle               : module-a, module-b.